<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculator" >

    <EditText
        android:id="@+id/etMealAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="4"
        android:inputType="numberDecimal" >
    </EditText>

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/defaultTipValue" />
    
    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/defaultTotalValue" />

    <Button
        android:id="@+id/btLeftTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etMealAmount"
        android:layout_marginTop="80dp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/btMiddleTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btLeftTip"
        android:layout_alignBottom="@+id/btLeftTip"
        android:layout_toRightOf="@+id/btLeftTip"
        android:layout_marginLeft="4dp"
        android:text="@string/button2" />

    <Button
        android:id="@+id/btRightTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btMiddleTip"
        android:layout_alignBottom="@+id/btMiddleTip"
        android:layout_toRightOf="@+id/btMiddleTip"
        android:layout_marginLeft="4dp"
        android:text="@string/button3" />

    <EditText
        android:id="@+id/etCustomTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btRightTip"
        android:layout_alignBottom="@+id/btRightTip"
        android:layout_toRightOf="@+id/btRightTip"
        android:layout_marginLeft="5dp"
        android:ems="3"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvCustomPercentStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etCustomTip"
        android:layout_alignBaseline="@+id/etCustomTip"
        android:layout_toRightOf="@+id/etCustomTip"
        android:text="@string/tvCustomPercentStatic"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
    <TextView
        android:id="@+id/tvCustomDollarStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etMealAmount"
        android:layout_alignBaseline="@+id/etMealAmount"
        android:layout_toLeftOf="@+id/etMealAmount"
        android:text="@string/tvCustomDollarStatic"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>
